fixed the overlapping results

--- a/style.css
+++ b/style.css
@@ -14,9 +14,14 @@
   text-align: center;
 }
 
+.inputValue {
+  outline: none;
+}
+
 .button {
   background-color: rgb(38, 139, 255);
   border: none;
+  outline: none;
   border-radius: 5px;
   color: white;
   font: 1rem;
